bynkc/tests/fixtures/positive/84_provider_matches_capability/src/demo/svc.karn
context demo.svc

capability Counter {
  fn next(seed: Int) -> Effect[Int]
  fn reset() -> Effect[()]
}

provides Counter = StubCounter {
  fn next(seed: Int) -> Effect[Int] {
    Effect.pure(seed + 1)
  }

  fn reset() -> Effect[()] {
    Effect.pure(())
  }
}
