bynkc/tests/fixtures/negative/68_provider_signature_mismatch/src/demo/svc.karn
context demo.svc

capability Logger {
  fn log(m: String) -> Effect[()]
}

provides Logger = WrongLogger {
  fn log(m: Int) -> Effect[()] {
    Effect.pure(())
  }
}
